# tichu

./: .gitignore  Cargo.toml  README.md
python/: client.py  tichu.py
src/: cli.yml  combinations.rs  deck.rs  lib.rs  main.rs  player.rs  tichugame.rs  tichuserver.rs
