[package]
name = "tichu"
version = "0.1.0"
authors = ["davekch <dave-koch@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"
itertools = "0.9.0"
bufstream = "0.1"
log = "0.4.8"
simplelog = "0.7.5"
ctrlc = "3.1.4"
